- diskdrake:
  o when formatting ntfs don't zero partition (#30928)

Version 10.4.131 - 18 May 2007, by Thierry Vignaud

- bug fix for rpmdrake: pkgs.pm file was missing
- diskdrake:
  o fix resizing's failures due to udev race when writing the
    partition table

Version 10.4.130 - 16 May 2007, by Thierry Vignaud

- bootloader-config: do create /boot/initrd-xxx.img when there is no
  bootloader (#30771 comment #21)
- create udev nodes configuration file in /etc/udev/devices.d/ instead
  of conf.d (used for modem and mouse)
- diskdrake:
  o use "mkfs.ext3" instead of "mkfs.ext2 -J"
    (to have dir_index & resize_inode features)
    (cf Frederik Himpe 23 Apr 2007 mail on cooker)
  o fix ext3 formatting with label and progress bar (#30032)
- localedrake: don't call grub-gfxmenu when used by simple user

Version 10.4.127 - 30 March 2007, by Olivier "blino" Blin

- don't configure /etc/kde/kdm/kdmrc if it doesn't exist
  (other kdmrc.rpmnew will be created, many important values will be missing)
- finish-install: source mandriva-release profile script to get
  correct gtk theme (Frederic Crozat)

Version 10.4.126 - 29 March 2007, by Olivier "blino" Blin

- use pci_domain when matching sysfs device and computing
  sysfs device path

Version 10.4.125 - 29 March 2007, by Olivier "blino" Blin

- fix multiple detection of PCI network cards with the same driver (#29688)

Version 10.4.123 - 26 March 2007, by Olivier "blino" Blin

- blacklist ax*, rose*, nr*, bce* and scc* Hamradio devices
  when detecting network interfaces (#28776)
- harddrake service: fallback on the right driver for ATI gfx cards
  when fglrx module is missing
- introduce shared bootloader functions so that draklive-install and
  drakboot add correct command line parameters (such as resume=)
- use grub by default (noticeable in One install)

Version 10.4.121 - 23 March 2007, by Thierry Vignaud

- interactive::curses: 
  o handle multi-line labels, and wrap too long labels (#29060)