@@ -1,3 +1,5 @@
+- progress bar wait_message: ensure it doesn't go crazy when asked to update
+  with the same fraction (eg #30090)
 - diskdrake:
   o when formatting ntfs don't zero partition (#30928)
 
